force-app/main/default/src/objects/PJN_Program_Problem__mdt/PJN_Program_Problem__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Program Builder
Purpose: Define the attributes of the problems/stages that comprise a Program. Program Problems are distinct stages in the patient’s journey that are (typically) completed before moving on to the next stage.
Metadata Relationship(s): Program; Program Case
Created by Mavens: Yes</description>
    <label>Program Problem</label>
    <pluralLabel>Program Problems</pluralLabel>
</CustomObject>