force-app/main/default/src/objects/PJN_Program_Problem__mdt/fields/PJN_Is_Removable__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Removable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Removable</label>
    <type>Checkbox</type>
</CustomField>