force-app/main/default/src/objects/PJN_Program_Problem__mdt/fields/PJN_Is_Startable__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Startable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Startable</label>
    <type>Checkbox</type>
</CustomField>