force-app/main/default/src/objects/PJN_Program_Problem__mdt/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <label>Program</label>
    <referenceTo>PJN_Program__mdt</referenceTo>
    <relationshipLabel>Program Problems</relationshipLabel>
    <relationshipName>PJN_Program_Problems</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>