force-app/main/default/src/objects/PJN_Program_Problem__mdt/listViews/PJN_All_Program_Problems.listView-meta.xml
<ListView>
    <fullName>PJN_All_Program_Problems</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Program__c</columns>
    <columns>PJN_Order__c</columns>
    <columns>PJN_Is_Standard__c</columns>
    <columns>PJN_Is_Library__c</columns>
    <columns>PJN_Is_Startable__c</columns>
    <columns>PJN_Is_Skippable__c</columns>
    <columns>PJN_Is_Removable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Program Problems</label>
    <language>en_US</language>
</ListView>